[gd_scene load_steps=10 format=3 uid="uid://bcp4ra6pm2jtu"]

[ext_resource type="Texture2D" uid="uid://ba64rora258qb" path="res://sprites/CardTemplate.png" id="1_dbwhd"]
[ext_resource type="Shader" path="res://Shaders/dissolve.gdshader" id="1_sfoao"]
[ext_resource type="Script" path="res://scripts/ItemCard.gd" id="2_v83le"]
[ext_resource type="Shader" path="res://Shaders/fake_3D.gdshader" id="4_ngwol"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3t3tn"]
seed = -15
frequency = 0.0021
fractal_octaves = 4
fractal_lacunarity = 1.975
fractal_gain = 0.74

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_av4a2"]
noise = SubResource("FastNoiseLite_3t3tn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5bot4"]
resource_local_to_scene = true
shader = ExtResource("1_sfoao")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.03
shader_parameter/burn_color = Color(0, 0, 0, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_av4a2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lhs0a"]
resource_local_to_scene = true
shader = ExtResource("4_ngwol")
shader_parameter/rect_size = null
shader_parameter/fov = 1.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl4ex"]
size = Vector2(127, 198)

[node name="Card" type="Button"]
material = SubResource("ShaderMaterial_5bot4")
offset_left = 247.0
offset_top = 134.0
offset_right = 391.0
offset_bottom = 347.0
scale = Vector2(1.13257, 1.14525)
pivot_offset = Vector2(73, 107)
focus_mode = 0
flat = true
script = ExtResource("2_v83le")

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.317647)
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 148.0
offset_bottom = 220.0
texture = ExtResource("1_dbwhd")

[node name="CardTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_lhs0a")
layout_mode = 0
offset_right = 144.0
offset_bottom = 214.0
texture = ExtResource("1_dbwhd")

[node name="DestroyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyArea"]
position = Vector2(72.5, 106)
shape = SubResource("RectangleShape2D_yl4ex")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
